kubernetes/clusters/home/utils/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: utils

  labels:
    app: homepage

spec:
  selector:
    app: homepage

  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP

  type: ClusterIP
