kubernetes/clusters/home/utils/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: utils

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx

  rules:
    - host: homepage.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 80
